testing LLM generations

--- a/LLM for Patient (test).ipynb
+++ b/LLM for Patient (test).ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "id": "e0a3cde9",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "True"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "id": "2d75b44a",
    "metadata": {},
    "outputs": [],
@@ -109,20 +109,40 @@
     "    return \"\\n--------------------\\n\".join(doc.page_content for doc in docs)\n",
     "\n",
     "\n",
-    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n",
-    "\n"
+    "llm = ChatOpenAI(model_name=\"gpt-3.5-turbo\", temperature=0)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "e6e21890",
+   "execution_count": 67,
+   "id": "7698e177",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# llm_gpt4 = ChatOpenAI(model_name=\"gpt-4-0125-preview\", temperature=0)\n",
+    "llm_gpt4 = ChatOpenAI(model_name=\"gpt-4-1106-preview\", temperature=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03c5a82a",
    "metadata": {},
    "outputs": [],
    "source": [
     "## RESET MEMORY\n",
-    "## To reset the memory (if it screws up), rerun this cell\n",
-    "memory = ConversationSummaryBufferMemory(llm=llm, memory_key=\"chat_history\", input_key=\"question\" )\n",
+    "## To reset the memory (if it screws up), rerun this cell, and the cell below\n",
+    "memory = ConversationSummaryBufferMemory(llm=llm, memory_key=\"chat_history\", input_key=\"question\" )\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "e6e21890",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "chain = (\n",
     "    {\n",
@@ -130,14 +150,14 @@
     "        \"question\": RunnablePassthrough()\n",
     "        } | \n",
     "    # prompt | \n",
-    "    LLMChain(llm=llm, prompt=prompt, memory=memory, verbose=True) #| \n",
+    "    LLMChain(llm=llm_gpt4, prompt=prompt, memory=memory, verbose=True) #| \n",
     "    # StrOutputParser()\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "id": "f443e8c7",
    "metadata": {},
    "outputs": [
@@ -180,71 +200,149 @@
       "o Wants the pain to stop  \n",
       "----------------------------------------------------------------------------------------------------------------------------- ---------\n",
       "--------------------\n",
-      "● Neuro :  \n",
-      "o Syncope (one episode), dysarthria  \n",
-      "o NIL headaches or vision changes  \n",
-      "o NIL weakness or numbness  \n",
-      "o NIL head trauma/falls (did not sustain injury during syncopal episode)  \n",
-      "● Gastro : \n",
-      "o NIL nausea or vomiting  \n",
-      "o NIL abdo pain  \n",
-      "o NIL changes to bowel habit or blood in stool, constipation or diarrhoea  \n",
-      "● Respi : \n",
-      "o Some breathlessness, not excessive  \n",
-      "o NIL cough or haemoptysis  \n",
-      "● Renal/Uro :  \n",
-      "o NIL urinary Sx - dysuria, haematuria  \n",
-      "● MSK/Derm  \n",
-      "o NIL joint or muscle pains  \n",
-      "o NIL rash or skin changes  \n",
-      "● Constitutional : NIL fever, weight loss, loss of appetite, night sweats  \n",
-      " \n",
-      "----------------------------------------------------------------------------------------------------------------------------- ---------   \n",
-      " \n",
-      "History taking: Others  \n",
       "● PMHx/Shx  * \n",
       "o HTN, HLD, T2DM, diagnosed 7 years ago, poorly compliant with meds  \n",
       "o History of biliary colic and gallstones, diagnosed 2 years ago  \n",
-      "o Recent hospitalisation and procedure done\n",
+      "o Recent hospitalisation and procedure done  \n",
+      "▪ Acute cholangitis 1 month ago, s/p ERCP for stone removal, NIL complications intra op or \n",
+      "post op  \n",
+      "o No previous chest pain of similar severity  \n",
+      "● Drug Hx , NKDA *  \n",
+      "o Enalapril for HTN, Rosuvastatin for HLD, metformin for T2DM, misses doses, poorly compliant, unsure \n",
+      "which one and time to take, lazy to check and feels he is ‘ok so far’  \n",
+      "o Does not measure home BP or blood sugar  \n",
+      "o NIL vitamins, supplements, TCM or OTC pills  \n",
+      "● Family history *  \n",
+      "o Father: Acute coronary syndrome (STEMI) at 50 years old, underwent PCI and stent  \n",
+      "o Mother: Some collagen tissue disorder, not sure what it was  \n",
+      "o Both parents have HTN and HLD, well controlled  \n",
+      "● Social history *  \n",
+      "o Smoker, 10 sticks a day for the past 30 years\n",
       "\n",
       "----------------------------------------------------------------\n",
       "You are to reply the doctor's following question, with reference to the above context.\n",
       "Question:\n",
-      "Are you okay?\n",
+      "Your mother have any history of heart disease?\n",
       "----------------------------------------------------------------\n",
       "Remember, answer in a short and sweet manner, don't talk too much.\n",
       "Your reply:\n",
       "\u001b[0m\n",
       "\n",
-      "\u001b[1m> Finished chain.\u001b[0m\n"
+      "\u001b[1m> Finished chain.\u001b[0m\n",
+      "No, she doesn't.\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'context': 'o Mother: Some collagen tissue disorder, not sure what it was  \\no Both parents have HTN and HLD, well controlled  \\n● Social history *  \\no Smoker, 10 sticks a day for the past 30 years  \\no Drinker, can of beer every dinner and weekend binge drinking with friends  \\no Diet, normally likes eating char kuay teow or fried carrot cake, doesn’t take much fruits or \\nvegetables  \\no Occupation: Retired, former taxi driver  \\no NIL exercise  \\no Sexual hx unremarkable  \\no NIL recent travel  \\n● Ideas, Concerns and Expectations  \\no Worried if he is having a heart attack, scared because his father had one  \\no Wants the pain to stop  \\n----------------------------------------------------------------------------------------------------------------------------- ---------\\n--------------------\\n● Neuro :  \\no Syncope (one episode), dysarthria  \\no NIL headaches or vision changes  \\no NIL weakness or numbness  \\no NIL head trauma/falls (did not sustain injury during syncopal episode)  \\n● Gastro : \\no NIL nausea or vomiting  \\no NIL abdo pain  \\no NIL changes to bowel habit or blood in stool, constipation or diarrhoea  \\n● Respi : \\no Some breathlessness, not excessive  \\no NIL cough or haemoptysis  \\n● Renal/Uro :  \\no NIL urinary Sx - dysuria, haematuria  \\n● MSK/Derm  \\no NIL joint or muscle pains  \\no NIL rash or skin changes  \\n● Constitutional : NIL fever, weight loss, loss of appetite, night sweats  \\n \\n----------------------------------------------------------------------------------------------------------------------------- ---------   \\n \\nHistory taking: Others  \\n● PMHx/Shx  * \\no HTN, HLD, T2DM, diagnosed 7 years ago, poorly compliant with meds  \\no History of biliary colic and gallstones, diagnosed 2 years ago  \\no Recent hospitalisation and procedure done',\n",
-       " 'question': 'Are you okay?',\n",
-       " 'chat_history': 'Human: What did I ask?\\nAI: You asked if I had any chest pain.',\n",
-       " 'text': \"No, I'm not okay.\"}"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "results = chain.invoke(\"Are you okay?\")\n",
+    "results = chain.invoke(\"Your mother have any history of heart disease?\")\n",
     "print(results.get(\"text\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "68a5d4c4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "student: Are you okay?\n",
+      "patient: No, I'm not okay.\n",
+      "student: What happened to you\n",
+      "patient: I suddenly had very bad chest pain that came suddenly.\n",
+      "student: Oh no, that's terrible! tell me more about your chest pain?\n",
+      "patient: I suddenly had very bad chest pain that came suddenly. It's a tearing pain and it radiates to my back. It started 1-2 hours ago this morning and hasn't improved.\n",
+      "student: how bad is the pain, on a scale of 1 to 5?\n",
+      "patient: The pain is a 4.\n",
+      "student: did you have any history of chest pain in the past?\n",
+      "patient: Yes, I had severe pain before due to cholangitis.\n",
+      "student: how does it compare to that?\n",
+      "patient: It's the same.\n",
+      "student: how does it compare to that? is the pain worse?\n",
+      "patient: Yes, the pain is worse.\n",
+      "student: have you ever had any headaches before this?\n",
+      "patient: No, I haven't had any headaches before this.\n",
+      "student: how about fainting?\n",
+      "patient: I fainted once.\n",
+      "student: can you tell me more about that time you fainted?\n",
+      "patient: I fainted once, but I didn't hit my head or anything.\n",
+      "student: okay great... how about nausea? do you feel like vomiting?\n",
+      "patient: No, I don't feel like vomiting.\n",
+      "student: any blood in the poop?\n",
+      "patient: No blood in poop.\n",
+      "student: alright that's great! can I know if you have any pains anywhere else?\n",
+      "patient: No, I don't have any other pains.\n",
+      "student: So only head pain?\n",
+      "patient: No, chest pain too.\n",
+      "student: ok. let me take a look at your skin. do you have rashes?\n",
+      "patient: No, I don't have rashes.\n",
+      "student: did you get the flu recently? any fever or cough so far?\n",
+      "patient: No, I didn't get the flu recently. No fever or cough.\n",
+      "student: good. Can I know a bit more about your health history?\n",
+      "patient: I have high blood pressure, high cholesterol, and type 2 diabetes. I also had gallstones and biliary colic. I was recently hospitalized for acute cholangitis and had a procedure to remove the stones. My father had a heart attack, and my mother had a collagen tissue disorder.\n",
+      "student: that's very detailed, thank you! do you have any allergies?\n",
+      "patient: No, I don't have any allergies.\n",
+      "student: great. what medication are you taking now for the high blood pressure and cholestrol?\n",
+      "patient: I take Enalapril for high blood pressure and Rosuvastatin for cholesterol.\n",
+      "student: do you take them regularly?\n",
+      "patient: No, I'm not good at taking them regularly.\n",
+      "student: can you tell me what are the doses, and when do you take them?\n",
+      "patient: I don't know the doses or when to take them.\n",
+      "student: that's not good! you should take them at regular intervals okay?\n",
+      "patient: Okay, I will take them regularly.\n",
+      "student: other than these medication, do you take anything else?\n",
+      "patient: No, I don't take anything else.\n",
+      "student: for diabetes?\n",
+      "patient: Yes, I have diabetes.\n",
+      "student: what medication do you take for diabetes?\n",
+      "patient: Metformin.\n",
+      "student: do you smoke?\n",
+      "patient: Yes, I smoke.\n",
+      "student: ok, how many packets do you usually smoke a day?\n",
+      "patient: I smoke 10 sticks a day.\n",
+      "student: smoking for how long already?\n",
+      "patient: 30 years.\n",
+      "student: any sexual activity? STDs?\n",
+      "patient: No recent sexual activity. No STDs.\n",
+      "student: ok. how about your parents? do they have history of chest pains as well\n",
+      "patient: Yes, both parents have chest pains.\n",
+      "student: ok, I will write you some medication for your pain. You wait here first okay?\n",
+      "patient: Okay, thank you.\n",
+      "student: are you sure that both your parents have chest pain?\n",
+      "patient: No, my parents have high blood pressure and high cholesterol, but they don't have chest pain.\n",
+      "student: who has chest pain?\n",
+      "patient: I have chest pain.\n",
+      "student: does your mother have chest pain?\n",
+      "patient: No.\n",
+      "student: does your father have chest pain then?\n",
+      "patient: Yes, my father had chest pain.\n",
+      "student: why does your father have chest pain? what happen to him\n",
+      "patient: My father has chest pain because he had aortic dissection.\n",
+      "student: why does your mother have chest pain? what happen to her\n",
+      "patient: My mother has chest pain because she had a sudden tearing pain that started this morning. She also experienced sweating, some difficulty breathing, and fainted once. Her speech was unclear when she shouted for help.\n",
+      "student: do you have history of heart attack?\n",
+      "patient: No.\n",
+      "student: do you think it could have been a heart attack?\n",
+      "patient: Yes.\n",
+      "student: Why?\n",
+      "patient: I don't know.\n",
+      "student: Your parents have any history of chest pain or heart disease?\n",
+      "patient: Yes, my father had a heart attack at 50.\n",
+      "student: Your mother have any history of heart disease?\n",
+      "patient: No, she doesn't.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "sp_mapper = {\"human\":\"student\",\"ai\":\"patient\"}\n",
+    "\n",
+    "## Get chat history out\n",
+    "[print(sp_mapper.get(i.type, i.type) + \":\", i.content) for i in memory.chat_memory.messages]\n",
+    "print()"
+   ]
   }
  ],
  "metadata": {
