add llm for gpt

--- a/LLM for Patient (test).ipynb
+++ b/LLM for Patient (test).ipynb
@@ -150,7 +150,8 @@
     "        \"question\": RunnablePassthrough()\n",
     "        } | \n",
     "    # prompt | \n",
-    "    LLMChain(llm=llm_gpt4, prompt=prompt, memory=memory, verbose=True) #| \n",
+    "    LLMChain(llm=llm, prompt=prompt, memory=memory, verbose=True) #| \n",
+    "    # LLMChain(llm=llm_gpt4, prompt=prompt, memory=memory, verbose=True) #|  ## GPT4\n",
     "    # StrOutputParser()\n",
     ")"
    ]
