--- a/LLM for Grading (test).ipynb
+++ b/LLM for Grading (test).ipynb
@@ -322,6 +322,7 @@
     "\n",
     "    # prompt # | \n",
     "    LLMChain(llm=llm, prompt=prompt, memory=memory, verbose=True) #|\n",
+    "    # LLMChain(llm=llm_gpt4, prompt=prompt, memory=memory, verbose=True) #| ## GPT4\n",
     "     \n",
     "    # StrOutputParser()\n",
     ")"
